# VibeCForms

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HOMOLOGACAO_FASE3.md  LICENSE  README.md  code_review_autocomplete.md  manage.py  pyproject.toml  requirements.txt  task-tag-as-state.md  test_homologacao_fase3.py  test_homologacao_final.py  test_homologacao_simples.py  workflow_kanban_skill_MANIFEST.md  wsgi.py
.claude/skills/ui-building/: SKILL.md  pyproject.toml
.claude/skills/ui-building/assets/: field_templates.xslt  form_template.xslt  table_template.xslt
.claude/skills/ui-building/references/: component_library.md  data_preparation.md  pattern_matching.md  tailwind_integration.md  troubleshooting.md  vibecforms_integration.md  xslt3_json.md
.claude/skills/ui-building/scripts/: convert_jinja_to_xslt.py  validate_xslt_data.py  xslt_renderer.py
.claude/skills/ui-building/src/saxonche_xslt/: __init__.py
docs/: ANALISE_FASE1_FASE2.md  ARCHITECTURE.md  FASE_2A_COMPLETION.md  FASE_2B_COMPLETION.md  FASE_3.3_RELATIONSHIP_CARDINALITY.md  FASE_3.4_REPORT.md  FASE_3_2_IMPLEMENTATION.md  KANBAN_README.md  MIGRATION.md  Manual.md  TECH_DEBT.md  bug_analysis_database_locked.md  code_review_2025-11-04.md  code_standards_review_2025-11-04.md  crockford_ids.md  dynamic_forms.md  homologacao_tags.md  learning_notes.md  persistence_phase1.md  plano_persistencia.md  prompts.md  relationship_integration.md  roadmap.md  tags_guide.md  task-tag-as-state.md  workflow_kanban_analysis_v2.md  workflow_phase1_summary.md  workflow_phase2_summary.md  workflow_phase3_summary.md  xslt-form-page-implementation.md  xslt-quick-reference.md
prototypes/: relationship_poc.py
scripts/: benchmark_migration.py  clean_all_data.py  demo_crockford.py  migrate_add_uuids.py  migrate_data_folder.py  migrate_sqlite_add_uuid.py  test_insert.py  test_uuid_preservation.py  test_uuid_simple.py  validate_fixes.py
src/: VibeCForms.py  contatos.txt  financeiro_contas.txt  formulario_completo.txt  pedidos.txt  produtos.txt  rh_departamentos_areas.txt  test.txt  test_delete.txt  test_update.txt  test_write_read.txt  vibecforms.db  workflow_audit.txt  workflow_processes.txt  workflow_routes.py
tests/: benchmark_performance.py  conftest.py  test_agents.py  test_anomaly_detector.py  test_auto_transition_engine.py  test_form.py  (+24 more)
(+288 files in other folders)
