[project]
name = "vibecforms"
version = "1.0.0"
description = "Flask-based contact management web application built as an exploration of Vibe Coding - AI-assisted development"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "VibeCForms Contributors" }
]

dependencies = [
    "flask==2.3.3",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
]
